# sail-embedding

./: README.md
sail-clustering/: pyproject.toml
sail-clustering/resources/: AS_VM_FM_profileDetailsVendorDetails.xml  PHQ_getFirstStartTime.xml  PHQ_getLastEndTime.xml  PHQ_getOverallCycleTime.xml  PHQ_getRequestBodyForAggregateData.xml
sail-clustering/sail_clustering/notebooks/: embeddings-api.ipynb  temppython
sail-syntax-tree/: README.md  pyproject.toml
sail-syntax-tree/resources/: AS_VM_FM_profileDetailsPrimary.txt  PHQ_getAttributeData.xml  PHQ_getCycleTimeOverTime.xml  PHQ_getJsonFromFilters.xml  _a-0000e974-6eca-8000-9ba5-011c48011c48_10634.xml
sail-syntax-tree/sail_syntax_tree/: syntax_tree_parsers.py
